--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>About || Industry Press || Responsive HTML 5 Template</title>
+	<title>About || Crystal Metals || Responsive HTML 5 Template</title>
 
 	<!-- responsive meta -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -65,7 +65,7 @@
             <div class="col-md-10 col-sm-12 col-xs-12">
                 <div class="mainmenu-bg clearfix">
                     <nav class="main-menu pull-left">
-                        <div class="navbar-header">   	
+                        <div class="navbar-header">     
                             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
@@ -78,55 +78,21 @@
                                 <li class="current"><a href="about.html">About</a></li>
                                 <li class="dropdown"><a href="solutions.html">Solutions</a>
                                     <ul>
-                                        <li><a href="chemical-research.html">Chemical Research</a></li>
-                                        <li><a href="agri-processing.html">Agriculture Processing</a></li>
-                                        <li><a href="petroleum-gas.html">Petroleum and Gas</a></li>
-                                        <li><a href="material-engineering.html">Material Engineering</a></li>
-                                        <li><a href="power-energy.html">Power and Energy</a></li>
-                                        <li><a href="mechanical-engin.html">Mechanical Engineering</a></li>
+                                        <li><a href="anodising.html">Anodising</a></li>
+                                        <li><a href="powder-coating.html">Powder Coating</a></li>
+
                                     </ul>
                                 </li>
-                                <li class="dropdown"><a href="projects.html">Projects</a>
-                                    <ul>
-                                        <li><a href="projects.html">Project Gallery</a></li>
-                                        <li><a href="project-single.html">Project Single</a></li>
-                                    </ul>
-                                </li>
-                                <li class="dropdown"><a href="news.html">News</a>
-                                    <ul>
-                                        <li><a href="news.html">News Default</a></li>
-                                        <li><a href="news-single.html">News Single</a></li>
-                                    </ul>
-                                </li>
-                                <li class="dropdown"><a href="shop.html">Shop</a>
-                                    <ul>
-                                        <li><a href="shop.html">Shop With Sidebar</a></li>
-                                        <li><a href="shop-single.html">Shop Single</a></li>
-                                        <li><a href="shopping-cart.html">Shopping Cart</a></li>
-                                        <li><a href="checkout.html">Checkout Page</a></li>
-                                        <li><a href="account.html">My Account</a></li>
-                                    </ul>
-                                </li>
-                                <li><a href="contact.html">Contact</a></li>
+                                <li ><a href="certifications.html">Certifications</a></li>
+                                <li ><a href="locations.html">Locations</a></li>
                             </ul>
                         </div>
                     </nav>
-                    <div class="top-search-box pull-right">
-                        <button><i class="fa fa-search"></i></button>
-                        <ul class="search-box">
-				            <li>
-				                <form action="#">
-								    <input type="text" placeholder="Search for something...">
-								    <button type="submit"><i class="fa fa-search"></i></button>
-								</form>
-				            </li>
-				        </ul>   
-                    </div>
                 </div>
             </div>
             <div class="col-md-2 col-sm-12 col-xs-3">
                 <div class="quote-button">
-                    <a class="thm-btn yellow-bg" href=""><i class="fa fa-share" aria-hidden="true"></i>Get a Quote</a>
+                    <a class="thm-btn yellow-bg" href="contact.html">Contact</a>
                 </div>    
             </div>
         </div>
@@ -180,11 +146,11 @@
             <div class="col-md-6">
                 <div class="content">
                     <div class="sec-title">
-                        <p>Welcome to Industry Press</p>
+                        <p>Welcome to Crystal Metals</p>
                         <h1>About Us</h1>    
                     </div>
                     <h3>We are providing good services to our valuable customers 
-                    <span>Purchase - Industry Press.</span></h3>
+                    <span>Purchase - Crystal Metals.</span></h3>
                     <p>Over 24 years experience and knowledge international standards, technologicaly changes and industrial systems, we are dedicated to provides seds the best and economical solutions to our valued customers there us are many variations of of  but the passages majority have suffered mistaken idea denouncing.</p>
                     <div class="caption-box">
                         <p>Who loves or pursues or desires to obtain pain of itself, because it is pain, but because occasionally circumstances occur</p>
@@ -202,7 +168,7 @@
 <section class="choosing-area">
     <div class="container">
         <div class="row">
-            <div class="col-md-4">
+            <div class="col-md-8">
                 <div class="content">
                     <div class="sec-title">
                         <p>25 Years of Experince</p>
@@ -242,62 +208,15 @@
                     </ul>
                 </div>
             </div>
-            <div class="col-md-4">
-                <div class="img-box">
-                    <img src="img/about/choosing-img.png" alt="Awesome Image">
-                </div>
-            </div>
-            <div class="col-md-4">
-                <form action="#">
-                    <div class="row">
-                        <div class="col-md-12">
-                            <input type="text" name="name" placeholder="Your Name*">  
-                        </div>
-                        <div class="col-md-12">
-                            <select class="selectmenu">
-                                <option selected="selected">Solution</option>
-                                <option>Solution One</option>
-                                <option>Solution Two</option>
-                                <option>Solution Three</option>
-                            </select>    
-                        </div>
-                        <div class="col-md-12">
-                            <div class="row">
-                                <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
-                                    <input type="text" name="phone" placeholder="Phone">
-                                </div>
-                                <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
-                                    <input type="text" name="email" placeholder="Email*">
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-12">
-                            <textarea name="message" placeholder="Write Your Needs..."></textarea>
-                        </div>
-                        <div class="col-md-12">
-                            <button class="thm-btn yellow-bg" type="submit">Submit Now</button>
-                        </div>
-                    </div> 
-                </form>  
-            </div>
-    
         </div>
+
+        <br/>
+        <br/>
     </div>
 </section>                                                           
 <!--End choosing area-->
  
-<!--Start caption area-->                                                                              
-<section class="caption-area text-center" style="background-image:url(img/resources/caption-bg.jpg);">  
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <h1>We are the world class engineering manufacturer providing<br> the highest quality products.</h1>
-                <a class="thm-btn yellow-bg" href="#">Our Solutions</a>    
-            </div>
-        </div>
-    </div>
-</section>                                        
-<!--End caption area-->                                                                                                                       
+                                                                                                                      
 <!--Start footer area-->  
 <footer class="footer-area">
     <div class="container">
@@ -431,7 +350,7 @@
                             <img src="img/footer/icon.jpg" alt="Awesome Image">
                         </div>
                         <div class="text-holder">
-                            <h5>Industry Press</h5>
+                            <h5>Crystal Metals</h5>
                             <a href="">Follow Us</a>    
                         </div>
                     </div>
@@ -492,7 +411,7 @@
         <div class="row">
             <div class="col-lg-5 col-md-6 col-sm-12 col-xs-12">
                 <div class="copyright-text">
-                    <p>Copyright © 2016 Industry Press Theme by <a href="">Steelthemes</a></p>
+                    <p>Copyright © 2016 Crystal Metals Theme by <a href="">Steelthemes</a></p>
                 </div>
             </div>
             <div class="col-lg-7 col-md-6 col-sm-12 col-xs-12">
