--- a/contact.html
+++ b/contact.html
@@ -65,7 +65,7 @@
             <div class="col-md-10 col-sm-12 col-xs-12">
                 <div class="mainmenu-bg clearfix">
                     <nav class="main-menu pull-left">
-                        <div class="navbar-header">   	
+                        <div class="navbar-header">     
                             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
@@ -74,65 +74,31 @@
                         </div>
                         <div class="navbar-collapse collapse clearfix">
                             <ul class="navigation">
-                                <li class="current"><a href="index.html">Home</a></li>
-                                <li><a href="about.html">About</a></li>
+                                <li><a href="index.html">Home</a></li>
+                                <li class="current"><a href="about.html">About</a></li>
                                 <li class="dropdown"><a href="solutions.html">Solutions</a>
                                     <ul>
-                                        <li><a href="chemical-research.html">Chemical Research</a></li>
-                                        <li><a href="agri-processing.html">Agriculture Processing</a></li>
-                                        <li><a href="petroleum-gas.html">Petroleum and Gas</a></li>
-                                        <li><a href="material-engineering.html">Material Engineering</a></li>
-                                        <li><a href="power-energy.html">Power and Energy</a></li>
-                                        <li><a href="mechanical-engin.html">Mechanical Engineering</a></li>
+                                        <li><a href="anodising.html">Anodising</a></li>
+                                        <li><a href="powder-coating.html">Powder Coating</a></li>
+
                                     </ul>
                                 </li>
-                                <li class="dropdown"><a href="projects.html">Projects</a>
-                                    <ul>
-                                        <li><a href="projects.html">Project Gallery</a></li>
-                                        <li><a href="project-single.html">Project Single</a></li>
-                                    </ul>
-                                </li>
-                                <li class="dropdown"><a href="news.html">News</a>
-                                    <ul>
-                                        <li><a href="news.html">News Default</a></li>
-                                        <li><a href="news-single.html">News Single</a></li>
-                                    </ul>
-                                </li>
-                                <li class="dropdown"><a href="shop.html">Shop</a>
-                                    <ul>
-                                        <li><a href="shop.html">Shop With Sidebar</a></li>
-                                        <li><a href="shop-single.html">Shop Single</a></li>
-                                        <li><a href="shopping-cart.html">Shopping Cart</a></li>
-                                        <li><a href="checkout.html">Checkout Page</a></li>
-                                        <li><a href="account.html">My Account</a></li>
-                                    </ul>
-                                </li>
-                                <li><a href="contact.html">Contact</a></li>
+                                <li ><a href="certifications.html">Certifications</a></li>
+                                <li ><a href="locations.html">Locations</a></li>
                             </ul>
                         </div>
                     </nav>
-                    <div class="top-search-box pull-right">
-                        <button><i class="fa fa-search"></i></button>
-                        <ul class="search-box">
-				            <li>
-				                <form action="#">
-								    <input type="text" placeholder="Search for something...">
-								    <button type="submit"><i class="fa fa-search"></i></button>
-								</form>
-				            </li>
-				        </ul>   
-                    </div>
                 </div>
             </div>
             <div class="col-md-2 col-sm-12 col-xs-3">
                 <div class="quote-button">
-                    <a class="thm-btn yellow-bg" href=""><i class="fa fa-share" aria-hidden="true"></i>Get a Quote</a>
+                    <a class="thm-btn yellow-bg" href="contact.html">Contact</a>
                 </div>    
             </div>
         </div>
     </div>
 </section>    
-<!--End mainmenu area-->     
+<!--End mainmenu area-->  
 
 <!--Start breadcrumb area-->     
 <section class="breadcrumb-area" style="background-image: url(img/breadcrumb/breadcrumb-bg.jpg);">
@@ -331,15 +297,19 @@
     <div 
         class="google-map" 
         id="contact-google-map" 
-        data-map-lat="40.712784" 
-        data-map-lng="-74.005941" 
+        data-map-lat="15.530" 
+        data-map-lng="73.814224" 
         data-icon-path="img/resources/map-marker.png"
         data-map-title="Brooklyn, New York, United Kingdom"
         data-map-zoom="12"
         data-markers='{
-            "marker-3": [40.678178, -73.944158, "<h4>Branch Office</h4> <p>228 Park Ave S, Brooklyn, UK</p>"],
-            "marker-4": [40.735657, -74.172367, "<h4>Branch Office</h4> <p>228 Park Ave S, Brooklyn, UK</p>"],
-            "marker-5": [40.668714, -74.114309, "<h4>Branch Office</h4> <p>228 Park Ave S, Brooklyn, UK</p>"]
+
+            "marker-3": [15.479908, 73.814224, "<h5>Miramar Store</h5>"],
+            "marker-4": [15.590765, 73.808763, "<h5>Mapusa Store</h5>"],
+            "marker-5": [15.581594, 73.953491, "<h5>Bicholim Factory</h5>"]
+
+
+
         }'>
 
     </div>
@@ -576,7 +546,7 @@
 <!-- easing -->
 <script src="js/jquery.easing.min.js"></script>
 <!-- gmap helper -->
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAHzPSV2jshbjI8fqnC_C4L08ffnj5EN3A"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCVrRYwWfx6NvrsGtWwB25FVP7YcO4YrEY"></script>
 <!--gmap script-->
 <script src="js/gmaps.js"></script>
 <script src="js/map-helper.js"></script>
