--- a/solutions.html
+++ b/solutions.html
@@ -65,7 +65,7 @@
             <div class="col-md-10 col-sm-12 col-xs-12">
                 <div class="mainmenu-bg clearfix">
                     <nav class="main-menu pull-left">
-                        <div class="navbar-header">   	
+                        <div class="navbar-header">     
                             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
@@ -75,58 +75,24 @@
                         <div class="navbar-collapse collapse clearfix">
                             <ul class="navigation">
                                 <li><a href="index.html">Home</a></li>
-                                <li><a href="about.html">About</a></li>
-                                <li class="dropdown current"><a href="solutions.html">Solutions</a>
+                                <li ><a href="about.html">About</a></li>
+                                <li class="current" class="dropdown"><a href="solutions.html">Solutions</a>
                                     <ul>
-                                        <li><a href="chemical-research.html">Chemical Research</a></li>
-                                        <li><a href="agri-processing.html">Agriculture Processing</a></li>
-                                        <li><a href="petroleum-gas.html">Petroleum and Gas</a></li>
-                                        <li><a href="material-engineering.html">Material Engineering</a></li>
-                                        <li><a href="power-energy.html">Power and Energy</a></li>
-                                        <li><a href="mechanical-engin.html">Mechanical Engineering</a></li>
+                                        <li><a href="anodising.html">Anodising</a></li>
+                                        <li><a href="powder-coating.html">Powder Coating</a></li>
+
                                     </ul>
                                 </li>
-                                <li class="dropdown"><a href="projects.html">Projects</a>
-                                    <ul>
-                                        <li><a href="projects.html">Project Gallery</a></li>
-                                        <li><a href="project-single.html">Project Single</a></li>
-                                    </ul>
-                                </li>
-                                <li class="dropdown"><a href="news.html">News</a>
-                                    <ul>
-                                        <li><a href="news.html">News Default</a></li>
-                                        <li><a href="news-single.html">News Single</a></li>
-                                    </ul>
-                                </li>
-                                <li class="dropdown"><a href="shop.html">Shop</a>
-                                    <ul>
-                                        <li><a href="shop.html">Shop With Sidebar</a></li>
-                                        <li><a href="shop-single.html">Shop Single</a></li>
-                                        <li><a href="shopping-cart.html">Shopping Cart</a></li>
-                                        <li><a href="checkout.html">Checkout Page</a></li>
-                                        <li><a href="account.html">My Account</a></li>
-                                    </ul>
-                                </li>
-                                <li><a href="contact.html">Contact</a></li>
+                                <li ><a href="certifications.html">Certifications</a></li>
+                                <li ><a href="locations.html">Locations</a></li>
                             </ul>
                         </div>
                     </nav>
-                    <div class="top-search-box pull-right">
-                        <button><i class="fa fa-search"></i></button>
-                        <ul class="search-box">
-				            <li>
-				                <form action="#">
-								    <input type="text" placeholder="Search for something...">
-								    <button type="submit"><i class="fa fa-search"></i></button>
-								</form>
-				            </li>
-				        </ul>   
-                    </div>
                 </div>
             </div>
             <div class="col-md-2 col-sm-12 col-xs-3">
                 <div class="quote-button">
-                    <a class="thm-btn yellow-bg" href=""><i class="fa fa-share" aria-hidden="true"></i>Get a Quote</a>
+                    <a class="thm-btn yellow-bg" href="contact.html">Contact</a>
                 </div>    
             </div>
         </div>
@@ -164,14 +130,14 @@
     <div class="container">
         <div class="row">
             <!--Start single service item-->
-            <div class="col-md-4 col-sm-4 col-xs-12">
+            <div class="col-md-6 col-sm-6 col-xs-12">
                 <div class="single-service-item">
                     <div class="img-holder">
                         <img src="img/services/1.jpg" alt="Awesome Image">
                         <div class="overlay">
                             <div class="box">
                                 <div class="content">
-                                    <a class="thm-btn yellow-bg" href="chemical-research.html">Read More</a>
+                                    <a class="thm-btn yellow-bg" href="anodising.html">Read More</a>
                                 </div>
                             </div>
                         </div>
@@ -181,141 +147,41 @@
                             <span class="flaticon-science"></span>    
                         </div>
                         <div class="text">
-                            <h3>Chemical Research</h3>
-                            <p>Chemical Research expertise in for you manipulating chemicals energy.</p>
+                            <h3>Anodising</h3>
+                            <p>AnodisingAnodisingAnodisingAnodising.</p>
                         </div>
                     </div>    
                 </div>
             </div>
             <!--End single service item-->
             <!--Start single service item-->
-            <div class="col-md-4 col-sm-4 col-xs-12">
+            <div class="col-md-46 col-sm-6 col-xs-12">
                 <div class="single-service-item">
                     <div class="img-holder">
                         <img src="img/services/2.jpg" alt="Awesome Image">
                         <div class="overlay">
                             <div class="box">
                                 <div class="content">
-                                    <a class="thm-btn yellow-bg" href="agri-processing.html">Read More</a>
+                                    <a class="thm-btn yellow-bg" href="powder-coating.html">Read More</a>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="text-holder">
                         <div class="icon">
-                            <span class="flaticon-nature"></span>    
+                            <span class="flaticon-science"></span>    
                         </div>
                         <div class="text">
-                            <h3>Agriculture Processing</h3>
-                            <p>Agricultural engineering at profession who developdesign procedure.</p>
+                            <h3>Powder Coating</h3>
+                            <p>Powder CoatingPowder CoatingPowder CoatingPowder Coating.</p>
                         </div>
                     </div>    
                 </div>
             </div>
             <!--End single service item-->  
-            <!--Start single service item-->
-            <div class="col-md-4 col-sm-4 col-xs-12">
-                <div class="single-service-item">
-                    <div class="img-holder">
-                        <img src="img/services/3.jpg" alt="Awesome Image">
-                        <div class="overlay">
-                            <div class="box">
-                                <div class="content">
-                                    <a class="thm-btn yellow-bg" href="petroleum-gas.html">Read More</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="text-holder">
-                        <div class="icon">
-                            <span class="flaticon-interface"></span>    
-                        </div>
-                        <div class="text">
-                            <h3>Petroleum and Gas</h3>
-                            <p>Petroleum Engineers are concerned with the petrol exploration, discovery.</p>
-                        </div>
-                    </div>    
-                </div>
-            </div>
-            <!--End single service item-->
+
         </div>
-        <div class="row">
-            <!--Start single service item-->
-            <div class="col-md-4 col-sm-4 col-xs-12">
-                <div class="single-service-item">
-                    <div class="img-holder">
-                        <img src="img/services/4.jpg" alt="Awesome Image">
-                        <div class="overlay">
-                            <div class="box">
-                                <div class="content">
-                                    <a class="thm-btn yellow-bg" href="material-engineering.html">Read More</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="text-holder">
-                        <div class="icon">
-                            <span class="flaticon-folder"></span>    
-                        </div>
-                        <div class="text">
-                            <h3>Material Engineering</h3>
-                            <p>Materials Engineering should scientific &amp; and engineering microstructure.</p>
-                        </div>
-                    </div>    
-                </div>
-            </div>
-            <!--End single service item-->  
-            <!--Start single service item-->
-            <div class="col-md-4 col-sm-4 col-xs-12">
-                <div class="single-service-item">
-                    <div class="img-holder">
-                        <img src="img/services/5.jpg" alt="Awesome Image">
-                        <div class="overlay">
-                            <div class="box">
-                                <div class="content">
-                                    <a class="thm-btn yellow-bg" href="power-energy.html">Read More</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="text-holder">
-                        <div class="icon">
-                            <span class="flaticon-nature-1"></span>    
-                        </div>
-                        <div class="text">
-                            <h3>Power and Energy</h3>
-                            <p>Ensuring high reliability and optimal sed performance of rotating power.</p>
-                        </div>
-                    </div>    
-                </div>
-            </div>
-            <!--End single service item-->  
-            <!--Start single service item-->
-            <div class="col-md-4 col-sm-4 col-xs-12">
-                <div class="single-service-item">
-                    <div class="img-holder">
-                        <img src="img/services/6.jpg" alt="Awesome Image">
-                        <div class="overlay">
-                            <div class="box">
-                                <div class="content">
-                                    <a class="thm-btn yellow-bg" href="mechanical-engin.html">Read More</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="text-holder">
-                        <div class="icon">
-                            <span class="flaticon-tool"></span>    
-                        </div>
-                        <div class="text">
-                            <h3>Mechanical Enginnering</h3>
-                            <p>Creating a dynamic company for that is continuous exploration &amp; develop.</p>
-                        </div>
-                    </div>    
-                </div>
-            </div>
-            <!--End single service item-->        
-        </div>
+
     </div>
 </section>
 <!--End solution area-->                                                                                                                                                                                                               
