--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>About || Crystal Metals || Responsive HTML 5 Template</title>
+	<title>About || Crystal Metals</title>
 
 	<!-- responsive meta -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -411,14 +411,12 @@
         <div class="row">
             <div class="col-lg-5 col-md-6 col-sm-12 col-xs-12">
                 <div class="copyright-text">
-                    <p>Copyright © 2016 Crystal Metals Theme by <a href="">Steelthemes</a></p>
+                    <p>Copyright © 2017 Crystal Metals</p>
                 </div>
             </div>
             <div class="col-lg-7 col-md-6 col-sm-12 col-xs-12">
                 <ul class="footer-menu">
-                    <li><a href="index.html">Home</a></li>    
-                    <li><a href="solutions.html">Solutions</a></li>    
-                    <li><a href="#">Privacy Policies</a></li>    
+                    <li><a href="index.html">Home</a></li>      
                     <li><a href="contact.html">Contact</a></li>      
                 </ul>      
             </div>
@@ -426,7 +424,6 @@
     </div>
 </section>    
 <!--End footer bottom area-->
-
 
 <!--Scroll to top-->
 <div class="scroll-to-top scroll-to-target" data-target="html"><span class="fa fa-angle-up"></span></div>
