--- a/project-single.html
+++ b/project-single.html
@@ -453,14 +453,12 @@
         <div class="row">
             <div class="col-lg-5 col-md-6 col-sm-12 col-xs-12">
                 <div class="copyright-text">
-                    <p>Copyright © 2016 Industry Press Theme by <a href="">Steelthemes</a></p>
+                    <p>Copyright © 2017 Crystal Metals</p>
                 </div>
             </div>
             <div class="col-lg-7 col-md-6 col-sm-12 col-xs-12">
                 <ul class="footer-menu">
-                    <li><a href="index.html">Home</a></li>    
-                    <li><a href="solutions.html">Solutions</a></li>    
-                    <li><a href="#">Privacy Policies</a></li>    
+                    <li><a href="index.html">Home</a></li>      
                     <li><a href="contact.html">Contact</a></li>      
                 </ul>      
             </div>
