--- a/certifications.html
+++ b/certifications.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Projects || Industry Press || Responsive HTML 5 Template</title>
+    <title>Certifications || Crystal Metals</title>
 
 	<!-- responsive meta -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -101,7 +101,7 @@
 <!--End mainmenu area-->   
 
 <!--Start breadcrumb area-->     
-<section class="breadcrumb-area" style="background-image: url(img/breadcrumb/breadcrumb-bg.jpg);">
+<section class="breadcrumb-area" style="background-image: url(img/breadcrumb/certification-breadcrumb-bg.png);">
 	<div class="container text-center">
 		<h1>Certifications</h1>
 	</div>
@@ -393,14 +393,12 @@
         <div class="row">
             <div class="col-lg-5 col-md-6 col-sm-12 col-xs-12">
                 <div class="copyright-text">
-                    <p>Copyright © 2016 Industry Press Theme by <a href="">Steelthemes</a></p>
+                    <p>Copyright © 2017 Crystal Metals</p>
                 </div>
             </div>
             <div class="col-lg-7 col-md-6 col-sm-12 col-xs-12">
                 <ul class="footer-menu">
-                    <li><a href="index.html">Home</a></li>    
-                    <li><a href="solutions.html">Solutions</a></li>    
-                    <li><a href="#">Privacy Policies</a></li>    
+                    <li><a href="index.html">Home</a></li>      
                     <li><a href="contact.html">Contact</a></li>      
                 </ul>      
             </div>
